<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#69c1ff"
    android:padding="20dip"
    tools:context=".Splash" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/build_version"
        android:textColor="#000"
        android:textStyle="italic" />

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loading_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:indeterminateBehavior="cycle"
        android:indeterminateDrawable="@drawable/progressbar" />

    <TextView
        android:id="@+id/loading_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/loading"
        android:textColor="#000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/app_logos"
        android:contentDescription="@string/app_logo" />

</RelativeLayout>