<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#aa61d9" >

        <TextView
            style="@style/list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/eod_btn_img"
            android:text="@string/eod_receipt" />

        <ImageView
            android:id="@+id/printerType"
            style="@style/list_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/connectPrinter"
            android:contentDescription="@string/printer_type"
            android:src="@drawable/btn_printer_3mm" />

        <ImageView
            android:id="@+id/connectPrinter"
            style="@style/list_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/printer_status"
            android:src="@drawable/printer_off" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/printContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alert_bg"
        android:scrollbars="none"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/print_details_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="#000" />

            <Button
                android:id="@+id/print_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/exit_btn"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/print_string"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>