<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="30dip"
        android:gravity="center_horizontal"
        android:text="@string/exit_string"
        android:textColor="#000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/yes_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@drawable/exit_btn"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="5dip"
            android:text="@string/yes_string"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/no_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/exit_btn"
            android:minHeight="40dp"
            android:padding="5dip"
            android:text="@string/no_string"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>