<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_item"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="4.5"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/customername_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pointname_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="@string/point_name"
            android:textColor="#888888" />
        <TextView


            android:id="@+id/session_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="@string/pickup"
            android:layout_marginBottom="3dp"
            android:textColor="@color/colorwarning" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.2"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|right"
            android:text=" "
            android:minLines="1"
             />

        <TextView
            android:id="@+id/amount_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:gravity="right|center"
            android:textColor="#888888" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        >

        <TextView
            android:id="@+id/ccode_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|right"
            android:text=" "
            android:textColor="#f3cf25"
            android:minLines="1"
            android:maxLines="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/arrow"
            android:gravity="center|right"
            android:layout_weight="1"
            android:text="@string/demo_amount"
            android:textColor="#f3cf25"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>