<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_item"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="4.5"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/customername_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pointname_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="@string/point_name"
            android:textColor="#888888" />
        <TextView
            android:id="@+id/shopid_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text=""
            android:textColor="#888888" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text=""
            android:textColor="#888888" />

        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/arrow"
            android:gravity="center|right"
            android:layout_weight="1"
            android:text="@string/demo_amount"
            android:textColor="#f3cf25"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>