<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/receivepayment_dialog_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/empty"
                android:textColor="#ff8a00"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/img_cancel"
                android:layout_alignParentRight="true"
                android:background="@drawable/cancel"
                android:layout_width="35dp"
                android:layout_height="35dp">
            </ImageView>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:id="@+id/receivepayment_dialog__txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/txt_box_f"
                android:hint="@string/receivepayment_dialog_hint"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/receivepayment_dialog_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/empty"
                android:textColor="#e51c1c"
                android:textStyle="bold" />

            <Button
                android:id="@+id/receivepayment_dialog_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/exit_btn"
                android:minHeight="40dp"
                android:minWidth="100dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>